--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -44,6 +44,10 @@ form > label
     font-size: 10px
     top: -13px
     text-shadow: none
+    animation-name: fade-small
   @keyframes fade
     from {opacity: 0;top:-15px;}
     to {opacity: 1;top:-25px;}
+  @keyframes fade-small
+    from {opacity: 0;top:-10px;}
+    to {opacity: 1;top:-13px;}
