--- a/sass/blocks/_popular.sass
+++ b/sass/blocks/_popular.sass
@@ -93,16 +93,21 @@
     @media   ( max-width: 992px )
       flex-wrap: wrap
       flex-direction: column
-      gap: 35px
-    @media   ( max-width: 418px )
-      gap: 16px
   &__link
     display: block
     text-decoration: none
+    &:nth-child(1)
+      margin-right: 35px
+      @media   ( max-width: 992px )
+        margin-right: 0
+        margin-bottom: 35px
+      @media   ( max-width: 418px )
+        margin-bottom: 16px
     @media  ( max-width: 1200px )
       flex-basis: 48.5%
     @media   ( max-width: 992px )
       flex-basis: 100%
+
     &:nth-child(1)
       & .popular__card-name
         margin-top: 341px
